--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.5.1",
     "styled-components": "^5.1.1",
     "uuid": "^8.3.0"
   },
